add host support

--- a/PETA_report_template__R__genome_landscape.ipynb
+++ b/PETA_report_template__R__genome_landscape.ipynb
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "token='02c67819-12f8-49a0-928f-92dde0e609ae'\n",
+    "token='67d95da7-f763-4fa3-9a9c-4b4edc2b548b'\n",
     "json_str='{\"studyIds\":[\"blca_mskcc_solit_2014\"],\"pageSize\":999999,\"pageIndex\":1,\"attributesRangeFilters\":[],\"attributesEqualFilters\":[],\"mutationFilter\":{\"hugoGeneSymbols\":[],\"exacStart\":0,\"exadEnd\":1,\"vabundStart\":0,\"vabundEnd\":1,\"variantSource\":[],\"variantType\":[],\"variantClass\":[],\"sequencer\":[],\"sequencerSource\":[],\"searchStr\":\"\"}}'\n",
     "host='https://peta.bgi.com/api'"
    ]
@@ -71,7 +71,7 @@
     "\n",
     "tryCatch({\n",
     "    pypyta<- import(\"pypeta\")\n",
-    "    peta=pypyta$Peta(token=token)\n",
+    "    peta=pypyta$Peta(token=token,host=host)\n",
     "    peta$set_data_restriction_from_json_string(json_str)\n",
     "    mut<-peta$fetch_mutation_data()\n",
     "    cli=peta$fetch_clinical_data()\n",
