fix: fix a bug that cause read.maf error. add mut<-mut[which(mut$NCBI_Build != 'NA'),] to skip rows with na values in NCBI_Build column.

--- a/PETA_report_template__R__genome_landscape.ipynb
+++ b/PETA_report_template__R__genome_landscape.ipynb
@@ -74,6 +74,7 @@
     "    peta=pypyta$Peta(token=token,host=host)\n",
     "    peta$set_data_restriction_from_json_string(json_str)\n",
     "    mut<-peta$fetch_mutation_data()\n",
+    "    mut<-mut[which(mut$NCBI_Build != 'NA'),]\n",
     "    cli=peta$fetch_clinical_data()\n",
     "    names(cli)[names(cli) =='sampleId'] <- 'Tumor_Sample_Barcode'\n",
     "\n",
