--- a/PETA_report_template__R__genome_landscape.ipynb
+++ b/PETA_report_template__R__genome_landscape.ipynb
@@ -10,20 +10,9 @@
    },
    "outputs": [],
    "source": [
-    "token='67d95da7-f763-4fa3-9a9c-4b4edc2b548b'\n",
+    "token='e6e35b82-5430-4f25-b584-ab400d826c1c'\n",
     "json_str='{\"studyIds\":[\"blca_mskcc_solit_2014\"],\"pageSize\":999999,\"pageIndex\":1,\"attributesRangeFilters\":[],\"attributesEqualFilters\":[],\"mutationFilter\":{\"hugoGeneSymbols\":[],\"exacStart\":0,\"exadEnd\":1,\"vabundStart\":0,\"vabundEnd\":1,\"variantSource\":[],\"variantType\":[],\"variantClass\":[],\"sequencer\":[],\"sequencerSource\":[],\"searchStr\":\"\"}}'\n",
     "host='https://peta.bgi.com/api'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "source": [
-    "启动python环境"
    ]
   },
   {
@@ -36,62 +25,39 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "# 启动python环境，并载入包\n",
     "tryCatch({\n",
     "    library(reticulate)\n",
     "    use_condaenv(\"r-reticulate\")\n",
-    "\n",
+    "    library(maftools)   \n",
     " },error=function(e){\n",
     "     print(e)\n",
     " } )"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "source": [
-    "调用pypeta获取数据"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide"
+     "hide",
+     "interaction"
     ]
    },
    "outputs": [],
    "source": [
-    "\n",
+    "# 调用pypeta获取数据\n",
     "tryCatch({\n",
     "    pypyta<- import(\"pypeta\")\n",
-    "    peta=pypyta$Peta(token=token,host=host)\n",
+    "    peta<-pypyta$Peta(token=token,host=host)\n",
     "    peta$set_data_restriction_from_json_string(json_str)\n",
     "    mut<-peta$fetch_mutation_data()\n",
     "    mut<-mut[which(mut$NCBI_Build != 'NA'),]\n",
-    "    cli=peta$fetch_clinical_data()\n",
+    "    cli<-peta$fetch_clinical_data()\n",
     "    names(cli)[names(cli) =='sampleId'] <- 'Tumor_Sample_Barcode'\n",
-    "\n",
     " },error=function(e){\n",
     "     print(e)\n",
-    " } )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "source": [
-    "以上为PETA系统IRKernel报告模板的必备固定代码，maf格式的突变信息和tsv格式的临床信息分别以dataframe格式存储于变量mut和cli中。下方为用户自定义代码，以执行各类分析和可视化功能。"
+    " } )"
    ]
   },
   {
@@ -133,8 +99,7 @@
     "tryCatch({\n",
     "    json<-import(\"json\")\n",
     "    json$loads(json_str)\n",
-    "    #pypyta$filter_description(json_str) #python函数中的print被导向到标准输出，不在当前位置显示\n",
-    "\n",
+    "    pypyta$filter_description(json_str)\n",
     " },error=function(e){\n",
     "     print(e)\n",
     " } )\n"
