fix: oncoplot fontsize

--- a/PETA_report_template__R__genome_landscape.ipynb
+++ b/PETA_report_template__R__genome_landscape.ipynb
@@ -189,14 +189,12 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "tryCatch({\n",
-    "     suppressMessages(suppressWarnings(oncoplot(maf = laml, top = 10)))\n",
-    "\n",
-    " },error=function(e){\n",
-    "     print(e)\n",
-    " } )\n",
-    "\n"
+    "    suppressMessages(suppressWarnings(oncoplot(maf = laml, top = 10, legendFontSize = 10)))\n",
+    "    \n",
+    "}, error = function(e) {\n",
+    "    print(e)\n",
+    "})"
    ]
   },
   {
